--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -149,6 +149,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="none">אף אחד</string>
     <string name="other">אחר</string>
     <string name="empty_file">קובץ ריק</string>
+    <string name="break_page_pdf_print">סיום עמוד (עבור PDF או הדפסה)</string>
     <string name="underline">קו תחתון</string>
     <string name="underline_hex_color_wether_or_not_to_description__appspecific">האם להוסיף קו תחתון מתחת לקוד הקסאדצימלי בהתאם לצבע</string>
     <string name="underline_hex_color_codes">הוסף שורה מתחת לקוד צבע הקסאדצימלי</string>
@@ -179,6 +180,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_ctrl_a">בחר הכל (Ctrl+A)</string>
     <string name="start_on_bottom">התחל בתחתית</string>
     <string name="start_on_bottom_when_loading_document">בעת טעינת קובץ, מקם את הסמן בסופו</string>
+    <string name="unordered_list_char_dash">מקף (-)</string>
+    <string name="unordered_list_char_asterisk">כוכבית (*)</string>
+    <string name="unordered_list_char_plus">פלוס (+)</string>
     <string name="filemanager_doesnot_supply_required_data__appspecific">Markor יכול לערוך קבצים מקומיים, המנותקים מהרשת בלבד ואינו תומך בסיירי קבצים שאינם מביאים נתיב מלא אל הקובץ.</string>
     <string name="sync_to_local_folder_notice">הערה: אפליקציות סנכרון יכולות לשים קבצים בתיקיות שרירותיות, לפתוח אותם באמצעות שינוי תיקיית המסמכים של Markor בהתאם, או במנהל קבצים אחר.</string>
     <string name="configure_in_the_apps_settings">הגדר בהגדרות האפליקציה</string>
@@ -190,6 +194,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="top">עליון</string>
     <string name="bottom">תחתית</string>
     <string name="center">מרכז</string>
+    <string name="textaction_spacing">ריווח פעולות טקסט</string>
+    <string name="horizontal_space_between_textactions">רווח אופקי בין כפטורי פעולות טקסט</string>
     <string name="center_text">מרכז טקסט</string>
     <string name="edit_text_in_center_of_screen">ערוך טקסט במרכז המסך</string>
     <string name="clipboard">לוח גזירים</string>
@@ -230,6 +236,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="math">מתמטיקה</string>
     <string name="table_of_contents">תוכן עניינים</string>
     <string name="miscellaneous">שונות</string>
+    <string name="textaction">פעולת טקסט</string>
+    <string name="textactions">פעולות טקסט</string>
     <string name="prefer_view">העדף תצוגה</string>
     <string name="no_calendar_app_is_installed">לא מותקנת אפליקציית לוח שנה!</string>
     <string name="popular_documents">מסמכים בשימוש נפוץ</string>
@@ -272,6 +280,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="internal_storage">אחסון פנימי</string>
     <string name="black">שחור</string>
     <string name="white">לבן</string>
+    <string name="view">הצג</string>
     <string name="view_mode">מצב תצוגה</string>
     <string name="edit_mode">מצב עריכה</string>
     <string name="mount_storage">הטמע אחסון</string>
@@ -279,13 +288,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="favourite">מועדף</string>
     <string name="favourites">מועדפים</string>
     <string name="please_wait">המתן</string>
+    <string name="app_start_folder">תיקייה לאתחול אפליקציה</string>
     <string name="tab_width">רוחב טאב</string>
     <string name="amount_of_space_for_tab">כמות הרווחים להצגת טאב</string>
     <string name="list_in_recent_files">הצג בקבצים אחרונים</string>
     <string name="reload">טען מחדש</string>
+    <string name="wrap_words">גלישת שורות</string>
     <string name="always_open_with_this_app">פתח תמיד עם אפליקציה זו</string>
     <string name="template">תבנית</string>
     <string name="send_debug_log">שליחה לוג לפטרון בעיות</string>
+    <string name="print_pdf">הדפסה / PDF</string>
+    <string name="bigger_headings">כותרות מוגדלות</string>
     <string name="current">נוכחי</string>
     <string name="record_audio">הקלט שמע</string>
     <string name="attach">צרף</string>
@@ -295,6 +308,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reading">קריאה</string>
     <string name="read">קרא</string>
     <string name="table">טבלה</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">כמה עמודות? לחיצה ארוכה על כפטור הטבלה תיצור טבלה (הכנס כותרת), לחיצה קצרה תוסיף שורה.</string>
+    <string name="example_of_a_markdown_table">דוגמא לטבלה בMarkdown</string>
     <string name="delete_lines">מחיקת שורות</string>
     <string name="unordered_list">רשימה לא ממוספרת</string>
     <string name="ordered_list">רשימה ממוספרת</string>
@@ -312,11 +327,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_5">כותרת 5‏</string>
     <string name="heading_6">כותרת 6‏</string>
     <string name="bold">הדגשה</string>
+    <string name="italic">נטוי</string>
+    <string name="highlighted">מסומן</string>
+    <string name="strikeout">מחוק בקו</string>
+    <string name="inline_code">קוד מוטבע</string>
     <string name="horizontal_line">קו אופקי</string>
     <string name="toggle_done">סמן כבוצע/לא-בוצע</string>
     <string name="link_color">צבע קישור</string>
     <string name="add_context">הוספת קונטקסט</string>
     <string name="add_project">הוספת פרוייקט</string>
+    <string name="archive_completed_tasks">העבר משימות שבוצעו לארכיון</string>
+    <string name="sort_alphabetically">מיין לפי</string>
     <string name="create_new_file_or_folder">צור קובץ או תיקייה</string>
     <string name="choose_format">בחר פורמאט</string>
     <string name="selected">נבחר</string>
@@ -347,4 +368,18 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
 FS yyyy MMM dd hh:mm:ss aa
 תוצאה:
 30KB 2020 Mar 20 11:24:52 PM</string>
+    <string name="loading_default_value">טוען ערך ברירת מחדל</string>
+    <string name="file_settings">הגדרות קובץ</string>
+    <string name="search_and_replace">חיפוש / החלפה</string>
+    <string name="search_for">חפש</string>
+    <string name="replace_with">החלף ב</string>
+    <string name="replace_all">החלף הכל</string>
+    <string name="matches">התאמות</string>
+    <string name="browse_by_project">עיין לפי פרוייקט</string>
+    <string name="browse_by_context">עיין לפי קונטקסט</string>
+    <string name="insert_project">הזן פרוייקטים</string>
+    <string name="insert_context">הזן קונטקסטים</string>
+    <string name="browse_todo">עיין ברשימת משימות</string>
+    <string name="browse_by_priority">עיין לפי עדיפות</string>
+    <string name="browse_by_due_date">עיין לפי תאריך גמר</string>
 </resources>
