[ci skip] Update translations (Hebrew)

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -162,6 +162,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending">הדגש סיום שורה</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">הדגש רווחים בסוף שורות המכילות שניים או יותר רווחים</string>
     <string name="use_monospace_for_code">השתמש בגופן monospace עבור קוד</string>
+    <string name="disable_code_block_highlight">מנע צביעה של גושי קוד</string>
+    <string name="auto_renumber_ordered_list">מספור מחדש אוטומטי של רשימות ממוספרות</string>
+    <string name="auto_renumber_ordered_list_slowdown">אפשרות זו עלולה להשפיע על ביצועי האפליקציה.</string>
     <string name="use_different_fonttype_slow_down">השתמש בגופנים מסוגים שונים. לשנות את זה דינאמית משפיע על ביצועי האפליקציה.</string>
     <string name="general">כללי</string>
     <string name="resources">מקורות</string>
@@ -180,8 +183,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_pos_1_document">תחילת מסמך</string>
     <string name="key_pos_end_document">סוף מסמך</string>
     <string name="key_ctrl_a">בחר הכל (Ctrl+A)</string>
+    <string name="key_tab">מחולל טבלאות</string>
     <string name="start_on_bottom">התחל בתחתית</string>
     <string name="start_on_bottom_when_loading_document">בעת טעינת קובץ, מקם את הסמן בסופו</string>
+    <string name="unordered_list_character">סימן עבור רשימות לא ממוספרות</string>
+    <string name="character_to_start_items_of_unordered_list_with">באיזה תו להשתמש לסימון רשימות לא ממוספרות</string>
     <string name="unordered_list_char_dash">מקף (-)</string>
     <string name="unordered_list_char_asterisk">כוכבית (*)</string>
     <string name="unordered_list_char_plus">פלוס (+)</string>
@@ -378,6 +384,20 @@ FS yyyy MMM dd hh:mm:ss aa
     <string name="replace_once">החלף (1)</string>
     <string name="replace_all">החלף הכל</string>
     <string name="matches">התאמות</string>
+    <string name="max_search_depth">עומק חיפוש</string>
+    <string name="ignore_list">רשימת התעלמות</string>
+    <string name="regex_search">חיפושי באמצעות ביטוי רגולרי (regex)</string>
+    <string name="regex_can_not_be_compiled">ביטוי רגולרי לא תקין</string>
+    <string name="keep_both">לשמור את שניהם</string>
+    <string name="skip">דלג</string>
+    <string name="overwrite">לדרוס</string>
+    <string name="keep_both_all">לשמור את שניהם (הכל)</string>
+    <string name="skip_all">דלג (על הכל)</string>
+    <string name="overwrite_all">לדרוס (את הכל)</string>
+    <string name="copy_move_conflict_message">\'%s\' כבר קיים ב %s</string>
+    <string name="additional_contexts_and_projects">קונטקסטים ופרוייקטים נוספים</string>
+    <string name="enter_space_seperated_contexts_and_projects_these_will">הזינו @קונטקסטים ו +פרויקטים עם רווחים בינהם. אלו תמיד יהיו זמינים בשדות כתיבה של רשימת המטלות.</string>
+    <string name="infinite">אינסופי</string>
     <string name="browse_by_project">עיין לפי פרוייקט</string>
     <string name="browse_by_context">עיין לפי קונטקסט</string>
     <string name="insert_project">הזן פרוייקטים</string>
