--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -293,6 +293,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="view_mode">מצב תצוגה</string>
     <string name="edit_mode">מצב עריכה</string>
     <string name="mount_storage">הטמע אחסון</string>
+    <string name="application_needs_access_to_storage_mount_it">גישה לאכסון זה דורשת הרשאות. יש לעגן (mount) את האכסון על מנת לתת גישה. לחץ אישור בכדי לקבל פופ-אפ שבו עליכם לבחור את האכסון.</string>
     <string name="share_into">שתף ל</string>
     <string name="favourite">מועדף</string>
     <string name="favourites">מועדפים</string>
@@ -300,9 +301,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="app_start_folder">תיקייה לאתחול אפליקציה</string>
     <string name="tab_width">רוחב טאב</string>
     <string name="amount_of_space_for_tab">כמות הרווחים להצגת טאב</string>
+    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">יתכן שהקובץ הנבחר הינו טקסט פשוט. האם ברצונכם לפתוח אותו בעורך או באפליקציה אחרת?\n\nאין לנסות לפתוח קבצים בינאריים. אם אינכם בטוחים, אז פתחו באמצעות אפליקציה אחרת.</string>
     <string name="list_in_recent_files">הצג בקבצים אחרונים</string>
     <string name="reload">טען מחדש</string>
     <string name="wrap_words">גלישת שורות</string>
+    <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">שבירת שורות במקרה של טקטס רחב מהמסך. אחרת אפשר גלילה אופקית.</string>
+    <string name="recursive_search_in_current_directory">חיפוש ריקורסיבי בתיקיה נוכחית.</string>
     <string name="always_open_with_this_app">פתח תמיד עם אפליקציה זו</string>
     <string name="template">תבנית</string>
     <string name="send_debug_log">שליחה לוג לפטרון בעיות</string>
