[ci skip] Update translations (Hindi)

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -169,6 +169,50 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="background">पृष्ठभूमि</string>
     <string name="font">फ़ॉन्ट</string>
     <string name="result">परिणाम</string>
+    <string name="just_date">केवल दिनांक</string>
+    <string name="last_used">आखिरी बार इस्तेमाल</string>
     <string name="close">बंद</string>
+    <string name="cancel">रद्द करना</string>
+    <string name="folder_first">फ़ोल्डर पहले</string>
+    <string name="go_to">इस पर चलें</string>
+    <string name="internal_storage">आंतरिक स्टोरेज</string>
+    <string name="navigationbar_color">नेविगेशन पट्टी रंग</string>
+    <string name="black">काला</string>
+    <string name="white">सफ़ेद</string>
+    <string name="view">दृश्य</string>
+    <string name="view_mode">दृश्य मोड</string>
+    <string name="edit_mode">संपादन मोड</string>
+    <string name="share_into">साझा करें</string>
     <string name="favourite">पसंदीदा</string>
+    <string name="favourites">पसंदीदा</string>
+    <string name="please_wait">कृपया प्रतीक्षा करें</string>
+    <string name="reload">फिर से लोड करें</string>
+    <string name="template">खाका</string>
+    <string name="send_debug_log">डिबग लग्स को भेजें</string>
+    <string name="print_pdf">PDF प्रिंट करें</string>
+    <string name="current">प्रगति पर</string>
+    <string name="heading_1">शीर्षक 1</string>
+    <string name="heading_2">शीर्षक २</string>
+    <string name="heading_3">शीर्षक 3</string>
+    <string name="heading_4">हेडिंग ४</string>
+    <string name="heading_5">शीर्षक ५</string>
+    <string name="heading_6">शीर्षक ६</string>
+    <string name="bold">बोल्ड</string>
+    <string name="italic">तिरछा</string>
+    <string name="highlighted">हाइलाइट्स</string>
+    <string name="inline_code">कोडित</string>
+    <string name="horizontal_line">क्षैतिज रेखा</string>
+    <string name="link_color">लिंक रंग</string>
+    <string name="add_context">संदर्भ जोड़ें</string>
+    <string name="add_project">प्रॉजेक्ट जोड़े</string>
+    <string name="sort_alphabetically">वर्णानुक्रम के अनुसार लगाएं</string>
+    <string name="choose_format">\' स्वरूप \' चुनें</string>
+    <string name="selected">चयनित</string>
+    <string name="back">पीछे</string>
+    <string name="essential">अनिवार्य</string>
+    <string name="drag">खींचना</string>
+    <string name="created">बनाया गया</string>
+    <string name="file_encryption_password">फाइल कूटबद्ध करने के लिए कूटशब्द</string>
+    <string name="code_block">कोड ब्लॉक</string>
+    <string name="file_description_format">विवरण फॉर्मेट</string>
 </resources>
